# mlops-gitops-lab-hc

./: CLAUDE.md  README.md  databricks.yml  pyproject.toml
.claude/commands/: catchup.md
.github/: continuous_delivery.yml  continuous_integration.yml  promote_pipeline_campaign_one.yaml  reusable_create_release.yml  reusable_lint_python_validator.yml  reusable_pr_comment.yml
.github/workflows/: continuous_delivery.yml  continuous_integration.yml  promote_pipeline_campaign_two.yaml  reusable_create_tag.yml  reusable_semantic_version.yml
.specify/memory/: constitution.md
config/: dev.yml  prod.yml
docs/: CICD_SETUP.md
labs/gitops-workflow/.github/workflows/: ci.yml
notebooks/: 00_setup_unity_catalog.py
specs/001-gitops-lab-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-gitops-lab-workflow/checklists/: requirements.md
specs/001-gitops-lab-workflow/contracts/: file-manifest.md
src/components/common/: mlflow_utils.py
src/components/run_campaign_one/: 01_build_universe.py
